k8s_node_ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ningress-service
spec:
  selector:
    app: ningress
  ports:
  - port: 11111
    targetPort: 11111
