k8s_node_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ningress-ingress
  labels:
    name: ningress-ingress
spec:
  rules:
  - host: shadyshady.com
    http:
      paths:
      - pathType: Prefix
        path: "/appone"
        backend:
          service:
            name: ningress-service
            port: 
              number: 11111
